[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "linkray"
version = "0.1.1"
description = "Repeatable LinkRay + Xray-core deployment tooling for multi-node proxy management."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "LinkRay Maintainers" },
]
dependencies = []

[project.urls]
Repository = "https://github.com/Zanetach/LinkRay"
Issues = "https://github.com/Zanetach/LinkRay/issues"

[project.scripts]
linkray = "linkray.cli:main"

[tool.setuptools.packages.find]
include = ["linkray", "linkray.*"]

[tool.setuptools.package-data]
linkray = [
  "assets/templates/marzban/clash/default.yml",
  "assets/patches/marzban-subscription/current/clash.py",
  "assets/patches/marzban-subscription-page/current/index.html",
  "assets/patches/marzban-dashboard/current/index.html",
  "assets/patches/marzban-dashboard/current/index.linkray.js",
  "assets/patches/marzban-dashboard/current/index.original.js",
  "assets/patches/marzban-jobs/current/linkray_singbox_usages.py",
  "assets/source-patches/marzban-dashboard/README.md",
  "assets/source-patches/marzban-dashboard/linkray-dashboard.patch",
  "assets/marzban-node-host/*",
]
